fixed spacing issues and displayed headline on all bps

--- a/components/banner/banner.less
+++ b/components/banner/banner.less
@@ -7,6 +7,8 @@
 
 
     a:not(.btn) {
+        padding-top:0;
+        padding-bottom:0;
         &:hover {
             text-decoration: none !important;
             h5 {
